<resources>
    <string name="app_name">Buyers</string>
    <string name="log_in">Log in</string>
    <string name="enter_your_first_name">Enter your First name</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="enter_your_last_name">Enter your Last name</string>
    <string name="enter_your_e_mail">Enter your E-mail</string>
    <string name="finish">Finish</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="e_mail">E-mail</string>
    <string name="confirm">Confirm</string>
</resources>